Tercera pre-entrega

--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
-</head>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Cormorant+Upright:wght@300;600&family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet"></head>
+    <meta name="description" content="Pagina de inicio de la hamburgueseria Wings Burgers. Se pueden observar distintas hamburguesas y descripciones generales de la empresa y las marcas con las que trabaja.">
+    <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, inicio">
 <body>
 <div>
   <div class="div-icons">
     <div>
-      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="./img/wpp.PNG" alt=""></a>
-      <a href="https://www.instagram.com/" target="blank"><img src="./img/ig.PNG" alt=""></a>
-      <a href="https://twitter.com/?lang=es" target="blank"><img src="./img/tw.PNG" alt=""></a>
-      <a href="https://www.facebook.com" target="blank"><img src="./img/fb.PNG" alt=""></a>
+      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="./img/wpp.PNG" alt="Icono de whatsapp"></a>
+      <a href="https://www.instagram.com/" target="blank"><img src="./img/ig.PNG" alt="Icono de instagram"></a>
+      <a href="https://twitter.com/?lang=es" target="blank"><img src="./img/tw.PNG" alt="Icono de twitter"></a>
+      <a href="https://www.facebook.com" target="blank"><img src="./img/fb.PNG" alt="Icono de facebook"></a>
     </div>
   </div>
 </div>
 
+  <header>
     <nav class="navbar navbar-expand-lg nav-yo">
       <div class="container-fluid">
-        <img src="./img/Logo comida circular marron.png" alt="" class="logo-nav">
+        <img src="./img/Logo comida circular marron.png" alt="Logo de Wings Burgers" class="logo-nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,18 +54,18 @@
         </div>
       </div>
     </nav>
-
+  </header>
   <div class="display-carrusel">
     <div id="carouselExampleAutoplaying" class="carousel slide div-size" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/hamnurguesita1.jpg" class="d-block img-size" alt="...">
+          <img src="./img/hamnurguesita1.jpg" class="d-block img-size" alt="Imagen de una hamburguesa">
         </div>
         <div class="carousel-item">
-          <img src="./img/hamburguesita2.jpg" class="d-block img-size" alt="...">
+          <img src="./img/hamburguesita2.jpg" class="d-block img-size" alt="Imagen de una hamburguesa">
         </div>
         <div class="carousel-item">
-          <img src="./img/hamburguesita3.jpg" class="d-block img-size" alt="...">
+          <img src="./img/hamburguesita3.jpg" class="d-block img-size" alt="Imagen de una hamburguesa">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -77,11 +80,39 @@
       </div>
     </div>
   </div>  
-
-  <div class="responsive">
-    <img src="./img/hamburguesa-responsive.jpg" alt="" class="img-celu">
-    <h1 class="h1-responsive">WINGS BURGERS</h1>
-  </div>
+  
+  <main class="main-index">
+    <div class="titulo-index">
+      <h1>WINGS BURGERS</h1>
+    </div>
+    <div class="sub-index"><h2>Bienvenido a tu hamburgueseria favorita</h2></div>
+    <div class="contenedor-index">
+    <div class="div-index">
+        <p>En Wings Burgers, nos enorgullece ofrecerte una experiencia culinaria única. Nuestras hamburguesas, preparadas con ingredientes frescos y de alta calidad, te transportarán a un mundo lleno de sabor y deleite.<br>
+        Imaginá cada bocado lleno de jugosidad, donde la carne se funde en tu boca y los sabores estallan en una sinfonía de placer. ¡Te garantizamos que te enamorarás de nuestras hamburguesas en el primer mordisco!</p>
+   
+        <p>Con una amplia variedad de opciones, desde la clásica hamburguesa con queso hasta nuestras creaciones gourmet, estamos seguros de que encontrarás la hamburguesa perfecta que satisfaga todos tus antojos. Y no olvides acompañarla con nuestras irresistibles papas fritas y refrescantes bebidas.<br>
+        En Wings Burgers, no solo nos preocupamos por la calidad de nuestra comida, sino también por brindarte un ambiente acogedor y un servicio excepcional. Nuestro amable personal estará encantado de atenderte y hacer que tu visita sea inolvidable.</p>
+    
+        <p>¡Vení y descubrí por qué somos la elección número uno de los amantes de las hamburguesas! Te esperamos con los brazos abiertos en nuestra hamburguesería.<br>
+        <strong>Horario de atención:</strong> Abierto todos los días de la semana, de 12:00 a.m. a 00:00 p.m.</p>
+    </div>
+    <div class="img-index-logo">
+      <img src="./img/Logo comida circular marron.png" alt="Logo de Wings Burgers">
+    </div>
+    </div>
+    <hr style="width: 80%; margin-left: 10%; border-style: solid; border-width: 1px; border-color: #000; opacity: 1;">
+    <div class="contenedor-index">
+      <div class="img-index-cocina">
+        <img src="./img/index-pic.jpg" alt="imagen de el chef preparando tres hamburguesas">
+      </div>
+      <div class="div-index-cocina">
+        <p>En nuestra empresa, nos enorgullece trabajar con marcas de la más alta calidad. Contamos con una amplia variedad de colaboraciones con reconocidas marcas del mercado, entre las cuales se incluyen Milkaut, Finca Sur, Martins, Bimbo, Pepsico, McCain, y muchas otras. Nos esforzamos por garantizar que nuestros productos y servicios cumplan con los estándares más exigentes, y por eso establecemos alianzas estratégicas con estas marcas de renombre. Trabajamos de cerca con cada una de ellas para brindar a nuestros clientes la excelencia y la confianza que se merecen. Estas marcas son líderes en sus respectivos campos, y estamos orgullosos de poder asociarnos con ellas para ofrecer productos y soluciones de alta calidad a nuestros clientes.</p>
+        <p>
+          En nuestra hamburguesería, operamos con un enfoque meticuloso en la cocina. Trabajamos con destreza y precisión para crear deliciosas hamburguesas que deleiten a nuestros clientes. Utilizamos ingredientes frescos y de alta calidad, seleccionados cuidadosamente para asegurar el mejor sabor y la máxima satisfacción. Nuestro equipo de chefs experimentados se dedica a perfeccionar cada aspecto de nuestras recetas, desde la jugosidad de la carne hasta la combinación de sabores en nuestros aderezos especiales. Cada hamburguesa se prepara con atención al detalle, desde el momento en que se selecciona el pan hasta que se le agrega el último toque. Nuestro objetivo es crear una experiencia culinaria excepcional para aquellos que disfrutan de nuestras hamburguesas, ofreciendo un bocado delicioso y lleno de sabor en cada visita.</p>
+      </div>
+    </div>
+  </main>
 
   <footer>
 
@@ -101,7 +132,7 @@
         <div class="pagos">
 
             <h4 class="h4-footer">MEDIOS DE PAGO</h4>
-            <img src="./img/medios de pago.jpg" alt="">
+            <img src="./img/medios de pago.jpg" alt="Imagen de los medios de pago disponibles">
         </div>
 
         <div class="contacto">
