--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,23 +10,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Cormorant+Upright:wght@300;600&family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet"></head>
+    <meta name="description" content="Pagina de el menu de la hamburgueseria Wings Burgers. Se puede ver el menu completo y la variedad de sabores y hamburguesas diferentes.">
+    <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, menu, carta, bacon, cebolla">
+
 </head>
 
 <body>
 <div>
   <div class="div-icons">
     <div>
-      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt=""></a>
-      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt=""></a>
-      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt=""></a>
-      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt=""></a>
+      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt="Icono de whatsapp"></a>
+      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt="Icono de instagram"></a>
+      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt="Icono de twitter"></a>
+      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt="Icono de facebook"></a>
     </div>
   </div>
 </div>
 
     <nav class="navbar navbar-expand-lg nav-yo">
       <div class="container-fluid">
-        <img src="../img/Logo comida circular marron.png" alt="" class="logo-nav">
+        <img src="../img/Logo comida circular marron.png" alt="Logo de Wings Burgers" class="logo-nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,9 +57,10 @@
     </nav>
 
     <main class="main-menu">
-
+      <div class="h1menu">
+        <h1>Wings Menu</h1>
+      </div>
       <div class="menu">
-          <img src="../img/papitas.jpg" alt="" class="img-menu">
           <ul class="ul-menu">
               <li><h4>BOBBY CHEESE</h4></li>
               <li><p>Dos medallones de carne, doble cheddar y mayonesa</p></li>
@@ -92,7 +97,7 @@
         <div class="pagos">
 
             <h4 class="h4-footer">MEDIOS DE PAGO</h4>
-            <img src="../img/medios de pago.jpg" alt="">
+            <img src="../img/medios de pago.jpg" alt="Imagen de los medios de pago disponibles">
         </div>
 
         <div class="contacto">
