--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,23 +10,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Pagina de informacion de la hamburgueseria Wings Burgers. Se puede ver una imagen de donde comenzo el proyecto y una descripcion de como se formo el mismo.">
+    <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, nosotros, historia, info, informacion">
+
 </head>
 
 <body>
 <div>
   <div class="div-icons">
     <div>
-      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt=""></a>
-      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt=""></a>
-      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt=""></a>
-      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt=""></a>
+      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt="Icono de whatsapp"></a>
+      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt="Icono de instagran"></a>
+      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt="Icono de twitter"></a>
+      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt="Icono de facebook"></a>
     </div>
   </div>
 </div>
 
     <nav class="navbar navbar-expand-lg nav-yo">
       <div class="container-fluid">
-        <img src="../img/Logo comida circular marron.png" alt="" class="logo-nav">
+        <img src="../img/Logo comida circular marron.png" alt="Logo de Wings Burgers" class="logo-nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,12 +60,12 @@
 
       <h4>Historia</h4>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium commodi accusamus expedita at unde minima corporis reprehenderit et laboriosam, officiis in? Nisi cupiditate non nihil magnam impedit corrupti sequi labore facilis ratione quo eaque qui tempora tenetur minus mollitia, quis veniam ea eveniet fuga omnis reiciendis eligendi repellat! Veritatis, perferendis! Vel voluptates minima, suscipit aut deleniti excepturi voluptatem autem laboriosam quas mollitia necessitatibus ipsam tenetur quos nesciunt, eius iusto dignissimos culpa deserunt. Vitae nostrum, fugit consectetur accusantium blanditiis cum voluptatibus maiores. Voluptatibus modi harum maiores dolores corrupti dolore illo commodi vitae temporibus quasi ad, saepe recusandae placeat accusamus, repudiandae possimus.</p>
+      <p>Somos un grupo de amigos que quiso empezar un emprendimiento juntos y que mejor que una hamburgueseria. Nuestros productos de la mas alta calidad estan pensados para repartir alegria en cada bocado.<br>Todo comienza en una tarde de primavera en el colegio donde cansados de los estudios decidimos abrir nuestra propia casa de hamburguesas, ya que a nosotros nos encantan. Nunca pensamos lograr lo que logramos hoy en dia y que una simple fantasia se convierta en una sabrosa experiencia.</p>
     </main>
 
 
       <div class="nosotros-img">
-        <img src="../img/promociones.jpg" alt="">
+        <img src="../img/cole.jpg" alt="Imagen del Colegio instituto Juan Manuel Berlgrano QHS Quilmes">
       </div>
 
   </div>
@@ -85,7 +88,7 @@
         <div class="pagos">
 
             <h4 class="h4-footer">MEDIOS DE PAGO</h4>
-            <img src="../img/medios de pago.jpg" alt="">
+            <img src="../img/medios de pago.jpg" alt="Imagen de los medios de pago disponibles">
         </div>
 
         <div class="contacto">
