--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -10,23 +10,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Pagina de promociones de la hamburgueseria Wings Burgers. Se pueden observar distintas hamburguesas en rebajas de precios y promociones imperdibles.">
+    <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, sale, rebaja, promo, promocion, descuento">
+
 </head>
 
 <body>
 <div>
   <div class="div-icons">
     <div>
-      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt=""></a>
-      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt=""></a>
-      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt=""></a>
-      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt=""></a>
+      <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt="Icono de whatsapp"></a>
+      <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt="Icono de instagram"></a>
+      <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt="Icono de twitter"></a>
+      <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt="Icono de facebook"></a>
     </div>
   </div>
 </div>
 
     <nav class="navbar navbar-expand-lg nav-yo">
       <div class="container-fluid">
-        <img src="../img/Logo comida circular marron.png" alt="" class="logo-nav">
+        <img src="../img/Logo comida circular marron.png" alt="Logo de Wings Burgers" class="logo-nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,16 +58,16 @@
     <div class="div-promo">
       
       <div class="img-1">
-          <img src="../img/promociones.jpg" alt="" class="promo-img">
+          <img src="../img/promoHBG4.jpg" alt="Imagen de una hamburguesa a modo de referencia para la promocion" class="promo-img">
       </div>
       <div class="img-2">
-        <img src="../img/promociones.jpg" alt="" class="promo-img">
+        <img src="../img/promoHBG.jpg" alt="Imagen de una hamburguesa a modo de referencia para la promocion" class="promo-img">
       </div>
       <div class="img-3">
-        <img src="../img/promociones.jpg" alt="" class="promo-img">
+        <img src="../img/promoHBG.jpg" alt="Imagen de una hamburguesa a modo de referencia para la promocion" class="promo-img">
       </div>
       <div class="img-4">
-        <img src="../img/promociones.jpg" alt="" class="promo-img">
+        <img src="../img/promoHBG3.jpg" alt="Imagen de una hamburguesa a modo de referencia para la promocion" class="promo-img">
       </div>      
 
         <div class="lista-1">
@@ -98,6 +101,9 @@
 
 
       <div class="texto">
+        <div class="h1-promo">
+        <h1>PROMOCIONES</h1>
+        </div>
           <p class="no-rem">Las promociones no son acumulables con
               otras.</p>
       </div>
@@ -122,7 +128,7 @@
         <div class="pagos">
 
             <h4 class="h4-footer">MEDIOS DE PAGO</h4>
-            <img src="../img/medios de pago.jpg" alt="">
+            <img src="../img/medios de pago.jpg" alt="Imagen de los medios de pago disponibles">
         </div>
 
         <div class="contacto">
