--- a/pages/sucursal.html
+++ b/pages/sucursal.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Pagina de la sucursal de la hamburgueseria Wings Burgers. Se puede ver donde queda ubicado el local y hay imagenes de referencia del nuevo quilmes plaza.">
+    <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, nuevo quilmes, nuevo quilmes plaza, centro comercial, ubicacion, quilmes">
+
 </head>
 
 <body>
@@ -17,17 +20,17 @@
   <div>
     <div class="div-icons">
       <div>
-        <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt=""></a>
-        <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt=""></a>
-        <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt=""></a>
-        <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt=""></a>
+        <a href="https://www.whatsapp.com/?lang=es" target="blank"><img src="../img/wpp.PNG" alt="Icono de whatsapp"></a>
+        <a href="https://www.instagram.com/" target="blank"><img src="../img/ig.PNG" alt="Icono de instagram"></a>
+        <a href="https://twitter.com/?lang=es" target="blank"><img src="../img/tw.PNG" alt="Icono de twitter"></a>
+        <a href="https://www.facebook.com" target="blank"><img src="../img/fb.PNG" alt="Icono de facebook"></a>
       </div>
     </div>
   </div>
 
   <nav class="navbar navbar-expand-lg nav-yo">
       <div class="container-fluid">
-        <img src="../img/Logo comida circular marron.png" alt="" class="logo-nav">
+        <img src="../img/Logo comida circular marron.png" alt="Logo de Wings Burgers" class="logo-nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +60,10 @@
     <div id="carouselExampleAutoplaying" class="carousel slide div-size" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/sucursal 1.jpg" class="d-block img-size" alt="...">
+          <img src="../img/sucursal 1.jpg" class="d-block img-size" alt="Imagen de el patio del centro comercial Nuevo Quilmes Plaza">
         </div>
         <div class="carousel-item">
-          <img src="../img/sucursal 2.jpg" class="d-block img-size" alt="...">
+          <img src="../img/sucursal 2.jpg" class="d-block img-size" alt="Imagen de el techo del centro comercial Nuevo Quilmes Plaza">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -74,7 +77,7 @@
       </div>
       </div>
     </div>
-    <h4 class="text-sucursal">Nuevo Quilmes Plaza</h4>
+    <h1 class="text-sucursal">Nuevo Quilmes Plaza</h1>
   </div>  
 
   <div class="div-mobile-sucursal">
@@ -115,7 +118,7 @@
         <div class="pagos">
 
             <h4 class="h4-footer">MEDIOS DE PAGO</h4>
-            <img src="../img/medios de pago.jpg" alt="">
+            <img src="../img/medios de pago.jpg" alt="Imagen de los medios de pago disponibles">
         </div>
 
         <div class="contacto">
