--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Cormorant+Upright:wght@300;600&family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Pagina de inicio de la hamburgueseria Wings Burgers. Se pueden observar distintas hamburguesas y descripciones generales de la empresa y las marcas con las que trabaja.">
     <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, inicio">
+</head>
+
 <body>
 <div>
   <div class="div-icons">
@@ -97,13 +100,13 @@
         <p>¡Vení y descubrí por qué somos la elección número uno de los amantes de las hamburguesas! Te esperamos con los brazos abiertos en nuestra hamburguesería.<br>
         <strong>Horario de atención:</strong> Abierto todos los días de la semana, de 12:00 a.m. a 00:00 p.m.</p>
     </div>
-    <div class="img-index-logo">
+    <div class="img-index-logo" data-aos="fade-left">
       <img src="./img/Logo comida circular marron.png" alt="Logo de Wings Burgers">
     </div>
     </div>
     <hr style="width: 80%; margin-left: 10%; border-style: solid; border-width: 1px; border-color: #000; opacity: 1;">
     <div class="contenedor-index">
-      <div class="img-index-cocina">
+      <div class="img-index-cocina" data-aos="fade-right">
         <img src="./img/index-pic.jpg" alt="imagen de el chef preparando tres hamburguesas">
       </div>
       <div class="div-index-cocina">
@@ -148,5 +151,9 @@
   </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
