--- a/pages/menu.html
+++ b/pages/menu.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Cormorant+Upright:wght@300;600&family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet"></head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Pagina de el menu de la hamburgueseria Wings Burgers. Se puede ver el menu completo y la variedad de sabores y hamburguesas diferentes.">
     <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, menu, carta, bacon, cebolla">
 
@@ -57,11 +58,11 @@
     </nav>
 
     <main class="main-menu">
-      <div class="h1menu">
+      <div class="h1menu" data-aos="zoom-out">
         <h1>Wings Menu</h1>
       </div>
       <div class="menu">
-          <ul class="ul-menu">
+          <ul class="ul-menu" data-aos="zoom-out">
               <li><h4>BOBBY CHEESE</h4></li>
               <li><p>Dos medallones de carne, doble cheddar y mayonesa</p></li>
               <li><h4>OLD SCHOOL</h4></li>
@@ -113,5 +114,9 @@
   </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
