--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description" content="Pagina de informacion de la hamburgueseria Wings Burgers. Se puede ver una imagen de donde comenzo el proyecto y una descripcion de como se formo el mismo.">
     <meta name="keywords" content="Wings Burgers, wings, burgers, hamburguesas, smash, Argentina, cheddar, milkaut, carne, comida, nosotros, historia, info, informacion">
 
@@ -64,7 +65,7 @@
     </main>
 
 
-      <div class="nosotros-img">
+      <div class="nosotros-img" data-aos="zoom-in-up">
         <img src="../img/cole.jpg" alt="Imagen del Colegio instituto Juan Manuel Berlgrano QHS Quilmes">
       </div>
 
@@ -104,5 +105,9 @@
   </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
