--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
         <p>¡Vení y descubrí por qué somos la elección número uno de los amantes de las hamburguesas! Te esperamos con los brazos abiertos en nuestra hamburguesería.<br>
         <strong>Horario de atención:</strong> Abierto todos los días de la semana, de 12:00 a.m. a 00:00 p.m.</p>
     </div>
-    <div class="img-index-logo" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="1500">
+    <div class="img-index-logo" data-aos="fade-up">
       <img src="./img/Logo comida circular marron.png" alt="Logo de Wings Burgers">
     </div>
     </div>
     <hr style="width: 80%; margin-left: 10%; border-style: solid; border-width: 1px; border-color: #000; opacity: 1;">
     <div class="contenedor-index">
-      <div class="img-index-cocina" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
+      <div class="img-index-cocina" data-aos="fade-up">
         <img src="./img/index-pic.jpg" alt="imagen de el chef preparando tres hamburguesas">
       </div>
       <div class="div-index-cocina">
