--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -101,7 +101,7 @@
         </div>
 
 
-      <div class="texto" data-aos="fade-left">
+      <div class="texto" data-aos="fade-up">
         <div class="h1-promo">
         <h1>PROMOCIONES</h1>
         </div>
